# falling-sand

./: .gitignore  CMakeLists.txt
include/: IntVector2.h  colorManager.h  particle.h  utils.h
src/: colorManager.c  falling_sand.c  main.c  particle.c
test/: color_test.c
